ДЗ_1. Исправлен формат работы с датой (для VisualStudio) datetime.date вместо date

--- a/Seminar1/Seminar1HomeExercise.ipynb
+++ b/Seminar1/Seminar1HomeExercise.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c13456b9-dbc8-4122-a02f-1a3ad9b93667",
    "metadata": {
     "tags": []
@@ -32,7 +32,7 @@
        "{'Апельсины': 5, 'Мандарины': 100, 'Лимоны': 80}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "2b3c0e55-be89-4148-8aff-93abeabdef32",
    "metadata": {
     "tags": []
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "a6df9197-b0d2-4800-82ae-49a1d79975e5",
    "metadata": {
     "tags": []
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "fd95d782-19e6-432f-8171-8802f14b40d7",
    "metadata": {
     "tags": []
@@ -114,7 +114,7 @@
        "[100, 125, -90, 345, 655, -1, 0, 200]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "4c4c9e1b-cb41-4b9a-a98f-dce873cd8400",
    "metadata": {
     "tags": []
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "cf5545f1-5f02-4966-ba19-3fa68cc8f7a4",
    "metadata": {
     "tags": []
@@ -149,7 +149,7 @@
        "[100, 125, 345, 655, 0, 200]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "cc087962-2123-4c26-8b04-9e0b32f4592b",
    "metadata": {
     "tags": []
@@ -173,7 +173,7 @@
        "1425"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "id": "72cb11d6-8abe-4e8f-b32b-416d6dd4dc00",
    "metadata": {
     "tags": []
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "id": "9b3fcb0a-077c-4d1f-909e-0fb130324eb8",
    "metadata": {
     "tags": []
@@ -240,19 +240,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "id": "4f5126e0-65b3-4206-8de1-1bded887f97f",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "dates = [date.fromisoformat(s) for s in dates_str]"
+    "import datetime\n",
+    "dates = [datetime.date.fromisoformat(s) for s in dates_str]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "id": "eacec683-5778-4375-90cf-499d8524921d",
    "metadata": {
     "tags": []
@@ -293,19 +294,19 @@
        " (datetime.date(2021, 12, 9), 2887)]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "purchases = list(zip([date.fromisoformat(s) for s in dates_str], values))\n",
+    "purchases = list(zip([datetime.date.fromisoformat(s) for s in dates_str], values))\n",
     "purchases"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "5caa1768-419e-460d-9aa7-aa5ad826bf37",
    "metadata": {
     "tags": []
@@ -334,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 16,
    "id": "ac9f36b7-aee1-4446-8ad2-f3cf5685172e",
    "metadata": {
     "tags": []
@@ -349,7 +350,7 @@
     }
    ],
    "source": [
-    "purchases_nov = sum([v for d,v in zip(dates_str, values) if date.fromisoformat(d).month == 11])\n",
+    "purchases_nov = sum([v for d,v in zip(dates_str, values) if datetime.date.fromisoformat(d).month == 11])\n",
     "print (\"Выручка в ноябре: \"+str(purchases_nov))"
    ]
   },
@@ -366,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 19,
    "id": "fed27656-6960-4cd2-9901-eee0e817bef0",
    "metadata": {
     "tags": []
@@ -374,16 +375,16 @@
    "outputs": [],
    "source": [
     "def create_dict_month_purchases(dates:list[str], values:list[float]) ->dict[int:float]:\n",
-    "    months = set([date.fromisoformat(s).month for s in dates_str])\n",
+    "    months = set([datetime.date.fromisoformat(s).month for s in dates_str])\n",
     "    val_m = []\n",
     "    for m in months:\n",
-    "        val_m.append(sum([v for d,v in zip(dates, values) if date.fromisoformat(d).month == m]))\n",
+    "        val_m.append(sum([v for d,v in zip(dates, values) if datetime.date.fromisoformat(d).month == m]))\n",
     "    return dict(zip(months, val_m))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 20,
    "id": "1575a317-7265-4727-ba8e-875e9ebcfa75",
    "metadata": {},
    "outputs": [
@@ -393,7 +394,7 @@
        "{9: 25647, 10: 28645, 11: 25098, 12: 45452}"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
